close room implemented